--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-streamlit==1.25.0        # For building the web application
+flask==2.0.1             # Flask web framework
 torch==2.0.1             # PyTorch for deep learning
 torchvision==0.15.2      # TorchVision for pretrained models and transformations
-Pillow==9.4.0            # For image handling and manipulation
+Pillow==9.4.0           # For image handling and manipulation
+werkzeug==2.0.3         # Werkzeug utilities for Flask
+gunicorn==20.1.0        # Production WSGI server
 
-
-#pip install -r requirements.txt
+# Install requirements using:
+# pip install -r requirements.txt
