--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 flask==2.0.1             # Flask web framework
-torch==2.0.1             # PyTorch for deep learning
-torchvision==0.15.2      # TorchVision for pretrained models and transformations
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==2.0.1+cpu       # PyTorch for deep learning (CPU version)
+torchvision==0.15.2+cpu # TorchVision for pretrained models and transformations (CPU version)
 Pillow==9.4.0           # For image handling and manipulation
 werkzeug==2.0.3         # Werkzeug utilities for Flask
 gunicorn==20.1.0        # Production WSGI server
