--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-flask==2.0.1             # Flask web framework
---find-links https://download.pytorch.org/whl/torch_stable.html
-torch==2.0.1+cpu       # PyTorch for deep learning (CPU version)
-torchvision==0.15.2+cpu # TorchVision for pretrained models and transformations (CPU version)
-Pillow==9.4.0           # For image handling and manipulation
-werkzeug==2.0.3         # Werkzeug utilities for Flask
-gunicorn==20.1.0        # Production WSGI server
+flask==2.0.1
+Werkzeug==2.0.3
+gunicorn==20.1.0
+Pillow==9.5.0
+--find-links https://download.pytorch.org/whl/cpu/torch_stable.html
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
+jinja2==3.0.1
+itsdangerous==2.0.1
 
 # Install requirements using:
 # pip install -r requirements.txt
