Fix Docker build issues - Remove problematic OpenCV dependencies and use native Python environment

--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -3,14 +3,13 @@ FROM python:3.10-slim
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies
+# Install minimal system dependencies
 RUN apt-get update && apt-get install -y \
     libglib2.0-0 \
     libsm6 \
     libxext6 \
     libxrender-dev \
     libgomp1 \
-    libgl1-mesa-glx \
     libjpeg-dev \
     libpng-dev \
     libtiff-dev \
@@ -40,9 +39,5 @@ ENV FLASK_ENV=production
 ENV PYTHONUNBUFFERED=1
 ENV MAX_CONTENT_LENGTH=10485760
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:5000/ || exit 1
-
 # Run the application
-CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "1", "--timeout", "300", "--preload", "app:app"]
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "1", "--timeout", "300", "app:app"]
