--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: starter
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --timeout 300 --max-requests 1000 --max-requests-jitter 100
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --timeout 300
     envVars:
       - key: FLASK_ENV
         value: production
@@ -12,6 +12,4 @@ services:
         value: "10485760"
       - key: PYTHONUNBUFFERED
         value: "1"
-      - key: TORCH_HOME
-        value: "/opt/render/project/src"
 
