--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
     name: cattle-ai-analyzer
     env: python
     plan: starter
+    region: oregon
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --timeout 300
     envVars:
