Add minimal Dockerfile and disable Docker in render.yaml - Fix deployment issues

--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
     plan: starter
     region: oregon
     pythonVersion: "3.10"
+    dockerfilePath: null
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --timeout 300
     envVars:
